--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
             }
 
             function playGame() {
-                var wsUri = "ws://localhost:8080/rodingame/game";
+                var wsUri = "ws://"+location.host + "/rodingame/game";
                 writeToScreen("Connecting to " + wsUri);
                 gameWebsocket = new WebSocket(wsUri);
                 gameWebsocket.onopen = function (evt) {
