--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,61 +1,86 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Rodin Game</title>
-    <script language="javascript" type="text/javascript">
-            var gameWebsocket;
+    <title>Rodin game</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-            function init() {
-                output = document.getElementById("output");
-            }
-
-            function playGame() {
-                var wsUri = "ws://"+location.host + "/rodingame/game";
-                writeToScreen("Connecting to " + wsUri);
-                gameWebsocket = new WebSocket(wsUri);
-                gameWebsocket.onopen = function (evt) {
-                    writeToScreen("You are in!");
-                    doSend(playerName.value);
-                };
-                gameWebsocket.onmessage = function (evt) {
-                    writeToScreen("Received message: " + evt.data);
-                    gameWebsocket.close();
-                };
-                gameWebsocket.onerror = function (evt) {
-                    writeToScreen('<span style="color: red;">ERROR:</span> ' + evt.data);
-                    gameWebsocket.close();
-                };
-            }
-
-            function doSend(message) {
-                gameWebsocket.send(message);
-                writeToScreen("Sent message: " + message);
-            }
-
-            function writeToScreen(message) {
-                var pre = document.createElement("p");
-                pre.style.wordWrap = "break-word";
-                pre.innerHTML = message;
-                output.appendChild(pre);
-            }
-
-            window.addEventListener("load", init, false);
-
-
-    </script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-<h1>Rodin Game</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <form>
+                <div class="form-group row">
+                    <label for="playerName" class="col-md-2 col-form-label">Player name:</label>
+                    <div class="col-md-4">
+                        <input class="form-control" id="playerName" aria-describedby="playerName" placeholder="Enter player name">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div id="doorCards" class="col-md-3">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Door card</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Door card</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Card in play</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Level 1</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Level 2</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div style="text-align: left;">
-    <form action="">
-        Enter your name:
-        <input id="playerName" name="playerName" value="" type="text"><br>
-        <input onclick="playGame()" value="Play!" type="button">
-        <br>
-    </form>
+    </div>
 </div>
-<div id="output"></div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
